--- a/BookStore/Views/ListProductByCategory/Index.cshtml
+++ b/BookStore/Views/ListProductByCategory/Index.cshtml
@@ -5,13 +5,11 @@
     Layout = "~/Views/Shared/_LayoutClient.cshtml";
     int n, i, count = 0;
     long cateID = 0;
-
-
 }
 
 <head>
-    <link href="~/Assets/fontawesome/css/all.min.css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <link href="@Url.Content("~/Assets/fontawesome/css/all.min.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/Scripts/jquery-3.4.1.js")"></script>
     <script>
         $("#Pages_menu").addClass("active");
     </script>
@@ -32,7 +30,7 @@
                         cateID = 1;
                     }
                 }
-                url: "/ListProductByCategory/ProductPage",
+                url: "@Url.Action("ProductPage", "ListProductByCategory")",
                 data: { skip: count, cateID:@cateID},
                 dataType: 'json',
                 //contentType: "application/json; charset=utf-8",
@@ -83,7 +81,7 @@
                             cateID = 1;
                         }
                     }
-                    url: "/ListProductByCategory/ProductPage",
+                    url: "@Url.Action("ProductPage", "ListProductByCategory")",
                     data: { skip: count, cateID:@cateID},
                     dataType: 'json',
                     //contentType: "application/json; charset=utf-8",
@@ -155,14 +153,15 @@
 <script id="rowTemplate" type="text/html">
     <div class="col-lg-4 col-md-6 col-sm-6">
         <div class="product__item">
-            <div class="product__item__pic set-bg" style="background-image: url('/Images/{Image}'); background-size: 194.4px 200px">
+            <div class="product__item__pic set-bg" style="background-image: url('@Url.Content("~/Images/{Image}")'); background-size: 194.4px 200px">
                 <ul class="product__item__pic__hover">
-                    @*<li><a href="#"><i class="fa fa-heart"></i></a></li>*@
-                    <li><a href="/them-gio-hang?productID={ID}&quantity=1"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li><a href="@Url.Action("AddItem", "Orders", new { productID =-1,quantity = 1}).Replace("-1","{ID}")"><i class="fa fa-shopping-cart"></i></a></li>
+                    @*<li><a href="/them-gio-hang?productID={ID}&quantity=1"><i class="fa fa-shopping-cart"></i></a></li>*@
                 </ul>
             </div>
             <div class="product__item__text">
-                <h6><a href="/chi-tiet/{Metatitle}-{ID}">{Name}</a></h6>
+                @*<h6><a href="/chi-tiet/{Metatitle}-{ID}">{Name}</a></h6>*@
+                <h6><a href="@Url.Action("DetailProduct", "ManageProduct", new { cateid= -1 }).Replace("-1","{ID}")">{Name}</a></h6>
                 <h5>{Price}<span>đ</span></h5>
             </div>
         </div>
@@ -170,7 +169,7 @@
 </script>
 
 <!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-section set-bg" data-setbg="/Assets/Client/img/breadcrumb.jpg">
+<section class="breadcrumb-section set-bg" data-setbg="@Url.Content("~/Assets/Client/img/breadcrumb.jpg")">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -198,7 +197,7 @@
                             @{
                                 foreach (var item in ViewBag.ProductCategory)
                                 {
-                                    <li><a href="/san-pham/@item.MetaTitle-@item.ID">@item.Name</a></li>
+                                    <li><a href="@Url.Action("Index", "ListProductByCategory", new {cateid= item.ID })">@item.Name</a></li>
                                 }
                             }
                         </ul>
@@ -243,9 +242,9 @@
                                                 {
                                                     break;
                                                 }
-                                                <a href="/chi-tiet/@latestproducts[j].MetaTitle-@latestproducts[j].ID" class="latest-product__item">
+                                                <a href="@Url.Action("DetailProduct", "ManageProduct", new { cateid= latestproducts[j].ID })" class="latest-product__item">
                                                     <div class="latest-product__item__pic">
-                                                        <img src="~/Images/@latestproducts[j].Image" alt="@latestproducts[j].Name" style="width:110px;height:110px">
+                                                        <img src="@Url.Content(String.Format("~/Images/{0}",latestproducts[j].Image))" alt="@latestproducts[j].Name" style="width:110px;height:110px">
                                                     </div>
                                                     <div class="latest-product__item__text">
                                                         @{
@@ -272,9 +271,9 @@
                                                 {
                                                     break;
                                                 }
-                                                <a href="/chi-tiet/@latestproducts[j].MetaTitle-@latestproducts[j].ID" class="latest-product__item">
+                                                <a href="@Url.Action("DetailProduct", "ManageProduct", new { cateid= latestproducts[j].ID })" class="latest-product__item">
                                                     <div class="latest-product__item__pic">
-                                                        <img src="~/Images/@latestproducts[j].Image" alt="@latestproducts[j].Name" style="width:110px;height:110px">
+                                                        <img src="@Url.Content(String.Format("~/Images/{0}",latestproducts[j].Image))" alt="@latestproducts[j].Name" style="width:110px;height:110px">
                                                     </div>
                                                     <div class="latest-product__item__text">
                                                         @{
@@ -307,17 +306,14 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="/Images/@item.Image" style="background-size:262.5px 270px;">
+                                             data-setbg="@Url.Content(String.Format("~/Images/{0}",item.Image))" style="background-size:262.5px 270px;">
                                             <div class="product__discount__percent">-@(item.PromotionPrice)%</div>
                                             <ul class="product__item__pic__hover">
-                                                @*<li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>*@
-                                                <li><a href="/them-gio-hang?productID=@item.ID&quantity=1"><i class="fa fa-shopping-cart"></i></a></li>
+                                                <li><a href="@Url.Action("AddItem", "Orders", new { productID= item.ID, quantity = 1 })"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
                                         <div class="product__discount__item__text">
-                                            @*<span>Dried Fruit</span>*@
-                                            <h5><a href="/chi-tiet/@item.MetaTitle-@item.ID">@item.Name</a></h5>
+                                            <h5><a href="@Url.Action("DetailProduct", "ManageProduct", new { cateid= item.ID })">@item.Name</a></h5>
                                             <div class="product__item__price">@(Math.Round((100-(int)item.PromotionPrice) * 1.0 / 100 * ((int)item.Price)).ToString("N0"))đ <span>@(item.Price.ToString("N0"))đ</span></div>
                                         </div>
                                     </div>
@@ -386,14 +382,13 @@
                     {
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="/Images/@item.Image" style="background-size: 194.4px 200px">
+                                <div class="product__item__pic set-bg" data-setbg="@Url.Content(String.Format("~/Images/{0}",item.Image))" style="background-size: 194.4px 200px">
                                     <ul class="product__item__pic__hover">
-                                        @*<li><a href="#"><i class="fa fa-heart"></i></a></li>*@
-                                        <li><a href="/them-gio-hang?productID=@item.ID&quantity=1"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li><a href="@Url.Action("AddItem", "Orders", new { productID= item.ID, quantity = 1 })"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="/chi-tiet/@item.MetaTitle-@item.ID">@item.Name</a></h6>
+                                    <h6><a href="@Url.Action("DetailProduct", "ManageProduct", new { cateid= item.ID })">@item.Name</a></h6>
                                     <h5>@item.Price.Value.ToString("N0")<span>đ</span></h5>
                                 </div>
                             </div>
