--- a/BookStore/Views/Orders/CheckOut.cshtml
+++ b/BookStore/Views/Orders/CheckOut.cshtml
@@ -5,14 +5,14 @@
 }
 
 <!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-section set-bg" data-setbg="/Assets/Client/img/breadcrumb.jpg">
+<section class="breadcrumb-section set-bg" data-setbg="@Url.Content("~/Assets/Client/img/breadcrumb.jpg")">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
                     <h2>Checkout</h2>
                     <div class="breadcrumb__option">
-                        <a href="/">Home</a>
+                        <a href="@Url.Action("Index","Home")">Home</a>
                         <span>Checkout</span>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
         {
             <div class="checkout__form">
                 <h4>Billing Details</h4>
-                <form action="Orders/Payment" method="get">
+                <form action="@Url.Action("Payment","Orders")" method="get">
                     <div class="row">
                         <div class="col-lg-7 col-md-6">
                             <div class="checkout__input">
@@ -53,13 +53,6 @@
                                     </div>
                                 </div>
                             </div>
-                            @*<div class="checkout__input__checkbox">
-                                    <label for="diff-acc">
-                                        Ship to a different address?
-                                        <input type="checkbox" id="diff-acc">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                </div>*@
                         </div>
                         <div class="col-lg-5 col-md-6">
                             <div class="checkout__order">
@@ -110,7 +103,7 @@
         {
             <div class="alert alert-danger text-center text-danger font-weight-bold">
                 Chưa có sản phẩm nào trong giỏ hàng &rarr;
-                <a href="/">Bắt đầu mua hàng</a>
+                <a href="@Url.Action("Index","Home")">Bắt đầu mua hàng</a>
             </div>
         }
     </div>
