--- a/BookStore/Views/Shared/_LayoutClient.cshtml
+++ b/BookStore/Views/Shared/_LayoutClient.cshtml
@@ -20,24 +20,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="/Assets/Client/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/Client/css/style.css" type="text/css">
-    <link href="~/Assets/Client/css/jquery-ui.css" rel="stylesheet" />
-    @*@Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")*@
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/bootstrap.min.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/font-awesome.min.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/elegant-icons.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/nice-select.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/jquery-ui.min.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/owl.carousel.min.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/slicknav.min.css")" type="text/css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/css/style.css")" type="text/css">
+    <link href="@Url.Content("~/Assets/Client/css/jquery-ui.css")" rel="stylesheet" />
     <style>
         #my_accout li:hover {
             background-color: #7fad39;
-            color:white;
+            color: white;
         }
     </style>
-    
+
 </head>
 
 <body>
@@ -50,7 +48,7 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="/Assets/Client/img/logo.png" alt=""></a>
+            <a href="#"><img src="@Url.Content("~/Assets/Client/img/logo.png")" alt=""></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
@@ -61,7 +59,7 @@
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
-                <img src="/Assets/Client/img/language.png" alt="">
+                <img src="@Url.Content("~/Assets/Client/img/language.png")" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
@@ -70,12 +68,12 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="/dang-ky"><i class="fa fa-user"></i>Đăng nhập</a>
+                <a href="@Url.Action("Register","UserSession")"><i class="fa fa-user"></i>Đăng nhập</a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
+                <li class="active"><a href="@Url.Action("Index","Home")">Home</a></li>
                 <li><a href="./shop-grid.html">Shop</a></li>
                 <li>
                     <a href="#">Pages</a>
@@ -85,7 +83,7 @@
                         <li><a href="./checkout.html">Check Out</a></li>
                     </ul>
                 </li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="@Url.Action("Contact","Home")">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -123,45 +121,23 @@
                                 <a href="https://twitter.com/phuongnamonline"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/company/cong-ty-co-phan-van-hoa-phuong-nam/"><i class="fa fa-linkedin"></i></a>
                             </div>
-                            @*<div class="header__top__right__language">
-                                <img src="/Assets/Client/img/language.png" alt="">
-                                <div>English</div>
-                                <span class="arrow_carrot-down"></span>
-                                <ul>
-                                    <li><a href="#">Spanis</a></li>
-                                    <li><a href="#">English</a></li>
-                                </ul>
-                            </div>*@
                             <div class="header__top__right__language header__top__right__auth">
                                 @{ var session = (UserLogin)Session[BookStore.Common.CommonConstant.USER_SESSION]; }
 
                                 @if (session == null)
                                 {
-                                    <a href="/dang-nhap"><i class="fa fa-user"></i> Login</a>
+                                    <a href="@Url.Action("Login","UserSession")"><i class="fa fa-user"></i> Login</a>
                                 }
                                 else
                                 {
                                     var name = db.Users.SingleOrDefault(s => s.UserName == session.UserName);
                                     <div><b style="font-size:16px">@name.Name</b></div>
                                     <ul id="my_accout">
-                                        <li><a href="/myAccount">Tài khoản của tôi</a></li>
+                                        <li><a href="@Url.Action("Index","UserLog")">Tài khoản của tôi</a></li>
                                         <li>@Html.ActionLink("Logout", "Logout", "UserSession")</li>
                                     </ul>
                                 }
                             </div>
-                            @*<div class="header__top__right__auth row text-right">
-                                @{ var session = (UserLogin)Session[BookStore.Common.CommonConstant.USER_SESSION]; }
-
-                                @if (session == null)
-                                {
-                                    <a href="/dang-nhap"><i class="fa fa-user"></i> Login</a>
-                                }
-                                else
-                                {
-                                    var name = db.Users.SingleOrDefault(s => s.UserName == session.UserName);
-                                    <span><b>@name.Name</b> @Html.ActionLink("Logout", "Logout", "UserSession")</span>
-                                }
-                            </div>*@
                         </div>
                     </div>
                 </div>
@@ -171,21 +147,21 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/Images/logo_nha_sach_Phuong_Nam_ngang-tet_290x56__2_.png" alt=""></a>
+                        <a href="@Url.Action("Index","Home")"><img src="@Url.Content("~/Images/logo_nha_sach_Phuong_Nam_ngang-tet_290x56__2_.png")" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul class="d-flex justify-content-center">
-                            <li id="Home_menu"><a href="/">Home</a></li>
+                            <li id="Home_menu"><a href="@Url.Action("Index","Home")">Home</a></li>
                             <li id="Pages_menu">
                                 <a href="#" onlick="return false">Pages</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="/shopping-cart">Shoping Cart</a></li>
-                                    <li><a href="/checkout">Check Out</a></li>
+                                    <li><a href="@Url.Action("Index","Orders")">Shoping Cart</a></li>
+                                    <li><a href="@Url.Action("CheckOut","Orders")">Check Out</a></li>
                                 </ul>
                             </li>
-                            <li id="Contact_menu"><a href="/contact">Contact</a></li>
+                            <li id="Contact_menu"><a href="@Url.Action("Contact","Home")">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -195,12 +171,12 @@
                             @{
                                 var cartsession = (List<BookStore.Models.CartItem>)Session[BookStore.Common.CommonConstant.CartSession];
                                 int sumPrice = 0;
-                             }
+                            }
                             @*<li>
-                                <a href="#"><i class="fa fa-heart"></i> <span>1</span></a>
-                            </li>*@
+                                    <a href="#"><i class="fa fa-heart"></i> <span>1</span></a>
+                                </li>*@
                             <li>
-                                <a href="shopping-cart">
+                                <a href="@Url.Action("Index","Orders")">
                                     <i class="fa fa-shopping-bag"></i> @{
                                         if (cartsession == null)
                                         {
@@ -238,13 +214,9 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form action="/tim-kiem" method="get">
-                                @*<div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>*@
+                            <form action="@Url.Action("Search","ManageProduct")" method="POST">
                                 <input type="text" placeholder="Bạn đang tìm gì?" id="txtKeyword" name="keyword">
-                                <button type="submit" class="site-btn">SEARCH</button>
+                                <button type="submit" id="search_btn" class="site-btn" @*onclick="submit_form_search(event)"*@>SEARCH</button>
                             </form>
                         </div>
                         <div class="hero__search__phone">
@@ -277,7 +249,7 @@
                             <li><b>Address:</b> @Contact.Address</li>
                             <li><b>Phone</b>: @Contact.Phone</li>
                             <li>
-                                @{ 
+                                @{
                                     string mailto = "mailto:" + Contact.Email;
                                 }
                                 <b>Email:</b><a href=@mailto> @Contact.Email</a>
@@ -334,7 +306,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
-                        <div class="footer__copyright__payment"><img src="/Assets/Client/img/payment-item.png" alt=""></div>
+                        <div class="footer__copyright__payment"><img src="@Url.Content("~/Assets/Client/img/payment-item.png")" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -342,16 +314,60 @@
     </footer>
     <!-- Footer Section End -->
     <!-- Js Plugins -->
-    <script src="/Assets/Client/js/jquery-3.3.1.min.js"></script>
-    <script src="/Assets/Client/js/bootstrap.min.js"></script>
-    <script src="/Assets/Client/js/jquery.nice-select.min.js"></script>
-    <script src="/Assets/Client/js/jquery-ui.min.js"></script>
-    <script src="/Assets/Client/js/jquery.slicknav.js"></script>
-    <script src="/Assets/Client/js/mixitup.min.js"></script>
-    <script src="/Assets/Client/js/owl.carousel.min.js"></script>
-    <script src="/Assets/Client/js/main.js"></script>
-    <script src="/Assets/Client/js/jquery-ui.js"></script>
-    <script src="/Assets/Client/js/controller/basecontroller.js"></script>
+    <script src="@Url.Content("~/Assets/Client/js/jquery-3.3.1.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/bootstrap.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/jquery.nice-select.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/jquery-ui.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/jquery.slicknav.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/mixitup.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/owl.carousel.min.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/main.js")"></script>
+    <script src="@Url.Content("~/Assets/Client/js/jquery-ui.js")"></script>
+    <script>
+        //basecontroller.js
+        var common = {
+            init: function () {
+                common.registerEvent();
+            },
+            registerEvent: function () {
+                $("#txtKeyword").autocomplete({
+                    minLength: 0,
+                    source: function (request, response) {
+                        $.ajax({
+                            url: "@Url.Action("ListName","ManageProduct")",
+                            dataType: "json",
+                            data: {
+                                term: request.term
+                            },
+                            success: function (res) {
+                                response(res.data);
+                            }
+                        });
+                    },
+                    focus: function (event, ui) {
+                        $("#txtKeyword").val(ui.item.label);
+                        return false;
+                    },
+                    select: function (event, ui) {
+                        $("#txtKeyword").val(ui.item.label);
+                        //$("#project-id").val(ui.item.value);
+                        //$("#project-description").html(ui.item.desc);
+                        //$("#project-icon").attr("src", "images/" + ui.item.icon);
+
+                        return false;
+                    }
+                })
+                    .autocomplete("instance")._renderItem = function (ul, item) {
+                        return $("<li>")
+                            //.append("<div>" + item.label + "<br>" + item.desc + "</div>")
+                            .append("<div>" + item.label + "</div>")
+                            .appendTo(ul);
+                    };
+            }
+        }
+
+        common.init();
+    </script>
     @RenderSection("jsFooter", required: false)
 </body>
 
